--- a/package.json
+++ b/package.json
@@ -1,54 +1,49 @@
 {
   "name": "companyass",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "reset-project": "node ./scripts/reset-project.js",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "ts:check": "tsc"
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "@alantoa/lightbox": "^0.3.1",
-    "@gorhom/bottom-sheet": "^4.6.1",
-    "@react-native-async-storage/async-storage": "1.21.0",
-    "@react-native-community/netinfo": "11.1.0",
-    "@react-navigation/bottom-tabs": "^6.5.20",
-    "@react-navigation/native": "^6.1.17",
-    "@react-navigation/stack": "^6.3.29",
-    "dayjs": "^1.11.10",
-    "expo": "~50.0.14",
-    "expo-build-properties": "^0.12.3",
-    "expo-camera": "~14.1.1",
-    "expo-clipboard": "~5.0.1",
-    "expo-constants": "~15.4.5",
-    "expo-font": "~11.10.3",
-    "expo-image-picker": "~14.7.1",
-    "expo-keep-awake": "~12.8.2",
-    "expo-local-authentication": "~13.8.0",
-    "expo-router": "~3.4.10",
-    "expo-secure-store": "~12.8.1",
-    "expo-sharing": "~11.10.0",
-    "expo-splash-screen": "~0.26.5",
-    "expo-sqlite": "~13.4.0",
-    "expo-status-bar": "~1.11.1",
-    "expo-updates": "~0.24.13",
-    "expo-web-browser": "~12.8.2",
+    "@expo/vector-icons": "^14.0.2",
+    "@react-navigation/native": "^6.0.2",
+    "expo": "^51.0.31",
+    "expo-constants": "~16.0.2",
+    "expo-font": "~12.0.9",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.23",
+    "expo-splash-screen": "~0.27.5",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.7",
+    "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
-    "react-native": "0.73.6",
-    "react-native-animatable": "^1.4.0",
-    "react-native-bars": "^2.4.3",
-    "react-native-gesture-handler": "~2.14.0",
-    "react-native-paper": "^5.12.3",
-    "react-native-reanimated": "~3.6.2",
-    "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0",
-    "zustand": "^4.5.2"
+    "react-dom": "18.2.0",
+    "react-native": "0.74.5",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.5",
+    "react-native-screens": "3.31.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
-    "typescript": "^5.5.3"
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.3",
+    "react-test-renderer": "18.2.0",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
