--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.2.4",
     "@expo-google-fonts/jetbrains-mono": "^0.2.3",
     "@expo-google-fonts/noto-sans": "^0.2.3",
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "^2.0.0",
     "@react-native-community/datetimepicker": "^8.0.1",
     "@react-navigation/bottom-tabs": "^6.6.1",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/elements": "^1.3.31",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.11.0",
+    "@supabase/supabase-js": "^2.45.2",
     "expo": "~51.0.28",
     "expo-constants": "~16.0.2",
     "expo-crypto": "~13.0.2",
@@ -36,6 +39,7 @@
     "expo-sqlite": "~14.0.6",
     "expo-status-bar": "~1.12.1",
     "expo-system-ui": "~3.0.7",
+    "expo-updates": "~0.25.24",
     "expo-web-browser": "~13.0.3",
     "i18n-js": "^4.4.3",
     "react": "18.2.0",
@@ -46,8 +50,7 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "expo-updates": "~0.25.24"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
